Fix layout of mutually exclusive when its wrapped in a question component (#424)
* Fix layout of mutually exclusive when its wrapped in a question component

* Fix mutually exclusive field wrapping when in a question

--- a/src/components/field/_field.scss
+++ b/src/components/field/_field.scss
@@ -20,13 +20,16 @@
     margin-top: -1rem;
   }
 
+  &__items {
+    display: block;
+  }
+
   &__item {
     display: inline-block;
     position: relative;
   }
 
-  & > &,
-  &__items > & {
+  *:not(.field__group) > & {
     &__item {
       margin: 0 0 0.5rem;
       width: 100%;
